feat: illustrate weird string type expanding
